--- a/package.json
+++ b/package.json
@@ -17,7 +17,20 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "flatpickr": "^4.6.13",
+    "izitoast": "^1.4.0",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
-  }
+  },
+  "description": "Bu proje Vite kullanılarak oluşturulmuştur. Ek özelliklerin tanınması ve özelleştirilmesi için [belgelere bakın](https://vitejs.dev/).",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yelyzaveta-Puzyrevska/goit-js-hw-10.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Yelyzaveta-Puzyrevska/goit-js-hw-10/issues"
+  },
+  "homepage": "https://github.com/Yelyzaveta-Puzyrevska/goit-js-hw-10#readme"
 }
